# RAG-Project-PipeLine

./: .dockerignore  Docker Guide.md  Dockerfile  README.md  README_HF.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-hf-spaces.yml  docker-build-push.yml
notebooks/: vanilla_rag.ipynb
project/config/: config.yaml
project/exception/: except.py
project/logger/: logging.py
project/model/: reranking.py  retriever.py
project/pipeline/: agents.py  rag.py
project/prompts/: prompt_template.py
project/source/: data_preparation.py
project/utils/: config_loader.py  model_loader.py
static/: styles.css
templates/: index.html
